err/gimme.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/dogpile'...
Listing './lib/python3.5/site-packages/dogpile/cache'...
Listing './lib/python3.5/site-packages/dogpile/cache/backends'...
Listing './lib/python3.5/site-packages/dogpile/cache/plugins'...
Listing './lib/python3.5/site-packages/dogpile/util'...
Listing './lib/python3.5/site-packages/dogpile.cache-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/gimme'...
Compiling './lib/python3.5/site-packages/gimme/dotdict.py'...
***   File "./lib/python3.5/site-packages/gimme/dotdict.py", line 21
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gimme/ext'...
Compiling './lib/python3.5/site-packages/gimme/middleware.py'...
***   File "./lib/python3.5/site-packages/gimme/middleware.py", line 80
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gimme/parsers'...
Compiling './lib/python3.5/site-packages/gimme/response.py'...
***   File "./lib/python3.5/site-packages/gimme/response.py", line 44
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gimme/routes.py'...
***   File "./lib/python3.5/site-packages/gimme/routes.py", line 119
    except IndexError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gimme/servers'...
Listing './lib/python3.5/site-packages/gimme/servers/http'...
Compiling './lib/python3.5/site-packages/gimme/servers/http/connection.py'...
***   File "./lib/python3.5/site-packages/gimme/servers/http/connection.py", line 216
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gimme/servers/http/server.py'...
***   File "./lib/python3.5/site-packages/gimme/servers/http/server.py", line 62
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gimme/servers/logger'...
Listing './lib/python3.5/site-packages/gimme/templates'...
Listing './lib/python3.5/site-packages/gimme/templates/errors'...
Listing './lib/python3.5/site-packages/gimme/templates/generator'...
Compiling './lib/python3.5/site-packages/gimme/templates/generator/app.py'...
***   File "./lib/python3.5/site-packages/gimme/templates/generator/app.py", line 12
    {%- if config.session %}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gimme/templates/generator/controllers'...
Listing './lib/python3.5/site-packages/gimme/templates/generator/views'...
Listing './lib/python3.5/site-packages/gimme/templates/generator/views/root'...
Compiling './lib/python3.5/site-packages/gimme/uri.py'...
***   File "./lib/python3.5/site-packages/gimme/uri.py", line 75
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gimme/wsgi.py'...
***   File "./lib/python3.5/site-packages/gimme/wsgi.py", line 24
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gimme-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
